--- a/templates/reports.html
+++ b/templates/reports.html
@@ -1,163 +1,294 @@
-<div class="container" style="background: #fff; height: 100vh;">
+<style>
+	.btn-default.btn-lg,.btn.btn-default.btn-lg.tabButton{
+		background: #3498DB;
+		color: #fff;
+		padding: 10px;
+		border-radius: 5px;
+		margin: 10px;
+	}
+	.table {
+		margin:10px;
+	}
+	.edit_sales{background: #3498DB; color: #fff; padding:8px 15px; border-radius: 5px;}
+	.table th, .table>tbody>tr>td{vertical-align: bottom; border: unset;padding: 16px;}
+	td.btn{
+		margin: unset;
+	}
+	#dateSelect{
+		padding: 8px 16px;
+		font-size: 16px;
+		margin-top: 10px;
+	}
+	.tabButton{margin: 0px; width: 80%;}
+	
+</style>
+<div class="container" style="background: #fff;">
 	<div class="col-md-3"></div>
-	<div class="col-md-9">
-    <div class="row">
-        <h1>Sales Reports</h1>
-    </div>
-    <div class="row">
-    	<div class="col-sm-12 reportBox">
-    		<!-- REPORT SELECT -->
-			<div class="row" ng-hide="selectHidden">
-				<div class="col-md-12 selectTab">
-					<h2 class="tabTitle">Select Report</h2>
-					<button type="button" class="btn btn-default btn-lg tabButton" ng-click="showWeekly()" style="background: #3498DB; color: #fff; padding: 10px; border-radius: 5px;">Weekly Sales</button><br>
-					<button type="button" class="btn btn-default btn-lg tabButton" ng-click="showMonthly()" style="background: #3498DB; color: #fff; padding: 10px; border-radius: 5px;">Monthly Sales</button><br>
-					<button type="button" class="btn btn-default btn-lg tabButton" ng-click="showAll()" style="background: #3498DB; color: #fff; padding: 10px; border-radius: 5px;">All Sales</button><br>
+	<div class="col-md-8">
+		<div class="row">
+			<h1>Sales Reports</h1>
+		</div>
+		<div class="row">
+			<div class="col-sm-12 reportBox">
+				<!-- REPORT SELECT -->
+				<div class="row" ng-hide="selectHidden">
+					<div class="col-md-12 selectTab">
+						<h2 class="tabTitle">Select Report</h2>
+						<div class="col-md-12">
+							<div class="col-md-4">
+								<button type="button" class="col-sm-12 col-md-12 btn btn-default btn-lg tabButton" ng-click="showWeekly()">Weekly Sales</button>
+							</div>
+							<div class="col-md-4">
+								<button type="button" class="col-sm-12 col-md-12 btn btn-default btn-lg tabButton" ng-click="showMonthly()" >Monthly Sales</button>
+							</div>
+							<!--div class="col-md-4">
+								<button type="button" class="col-sm-12 col-md-12 btn btn-default btn-lg tabButton" ng-click="showAll()">All Sales</button>
+							</div-->
+							<div class="col-md-4">
+								<button type="button" class="col-sm-12 col-md-12 btn btn-default btn-lg tabButton" ng-click="showYearly()" >Yearly Sales</button>
+							</div>
+						</div>
+					</div>
 				</div>
-			</div>
 
-			<div class="scrollable">
-				<div ng-switch="reportToShow" ng-animate="'slide'">
-					<!-- WEEKLY -->
-		    		<div class="row" ng-switch-when="1">
-		    			<div class="col-md-12 reportTab">
-		    				<div class="col-md-12">
-		    					<h2 class="tabTitle">Weekly Sales</h2>
-								<p class="tabTitle">Please generate report to view editable sales.</p>	
-		    				</div>
-							
-							<div class="row buttonContainer">
+				<div class="scrollable">
+					<div ng-switch="reportToShow" ng-animate="'slide'">
+						<!-- WEEKLY -->
+						<div class="" ng-switch-when="1">
+							<div class="col-md-12 reportTab">
 								<div class="col-md-12">
-									<label for="dateSelect">Week starting: </label>
-									<input style="padding: 5px;" type="date" id="dateSelect" class="hide-replaced" ng-model="startDate.value" />
-									<button type="button" class="btn btn-default btn-lg tabButton" ng-click="getWeeklySales()" style="background: #3498DB; color: #fff; padding: 10px; border-radius: 5px;">Get Report</button>
-										
-						     	</div>
-							</div>
-							<div class="row scrollable" ng-hide="hideTable">
-								<table class="table table-striped">
-								    <thead>
-								      <tr>
-								        <th>Sale ID</th>
-								        <th>Date/Time</th>
-								        <th>Total Items</th>
-								        <th>Total Price</th>
-								        <th></th>
-								        <th></th>
-								      </tr>
-								    </thead>
-								    <tbody>
-								      <tr ng-repeat="sale in salesArray">
-								        <td>{{sale.ID}}</td>
-								        <td>{{sale.SaleDateTime}}</td>
-								        <td>{{sale.TotalItems}}</td>
-								        <td>{{sale.TotalValue}}</td>
-								        <td><a ng-href="./#/sales/{{sale.ID}}" style="background: #3498DB; color: #fff; padding: 10px 15px; border-radius: 5px;">Edit</a></td>
-								        <td class="btn" ng-click="deleteSale(sale.ID)" style="color: #E74C3C">X</td>
-								      </tr>
-								    </tbody>
-						  		</table>
-							</div>
-							<hr>
-							<div class="row buttonContainer">
-								<!-- Return to report select -->
-						     	<button type="button" class="btn btn-default btn-lg tabButton" ng-click="returnToSelect()" style="background: #E74C3C; color: #fff; padding: 10px; border-radius: 5px;">Return</button>
-						     	<!-- GET for generating CSV file. http://code.stephenmorley.org/php/creating-downloadable-csv-files/ -->
- 							    <button type="button" class="btn btn-default btn-lg tabButton" ng-csv="salesArray" filename="WeeklySales{{date | date:'yyyy-MM-dd'}}.csv" field-separator="," decimal-separator="." style="background: #1ABB9C; color: #fff; padding: 10px; border-radius: 5px;">Generate CSV</button>
+									<h2 class="tabTitle">Weekly Sales</h2>
+									<p class="tabTitle">Please generate report to view editable sales.</p>	
+								</div>
+								<div class="row buttonContainer">
+									<div class="col-md-12">
+										<div class="col-md-6 btnlabel">
+											<label for="dateSelect">Week start:</label>
+											<input type="date" id="dateSelect" class="hide-replaced" ng-model="startDate.value" />	
+										</div>
+										<div class="col-md-6">
+											<button type="button" class="btn btn-default btn-lg tabButton" ng-click="getWeeklySales()">Get Report</button>
+										</div>
+									</div>
+								</div>
+								<div class="row" ng-hide="hideTable">
+									<table class="table table-striped">
+										<thead>
+										<tr>
+											<th>Sale ID</th>
+											<th>Date/Time</th>
+											<th>Total Items</th>
+											<th>Total Price</th>
+											<th></th>
+											<th></th>
+										</tr>
+										</thead>
+										<tbody>
+										<tr ng-repeat="sale in salesArray">
+											<td>{{sale.ID}}</td>
+											<td>{{sale.SaleDateTime}}</td>
+											<td>{{sale.TotalItems}}</td>
+											<td>{{sale.TotalValue}}</td>
+											<td><a ng-href="./#/sales/{{sale.ID}}" class="edit_sales">Edit</a></td>
+											<td class="btn" ng-click="deleteSale(sale.ID)" style="color: #E74C3C">X</td>
+										</tr>
+										</tbody>
+									</table>
+								</div>
+								<hr>
+								<div class="buttonContainer">
+									<!-- Return to report select -->
+									<div class="col-md-12">
+										<div class="col-md-6">
+											<button type="button" class="btn btn-default btn-lg tabButton" ng-click="returnToSelect()" style="background: #E74C3C;">Return</button>
+										</div>
+										<div class="col-md-6">
+											<!-- GET for generating CSV file. http://code.stephenmorley.org/php/creating-downloadable-csv-files/ -->
+											<button type="button" class="btn btn-default btn-lg tabButton" ng-csv="salesArray" filename="WeeklySales{{date | date:'yyyy-MM-dd'}}.csv" field-separator="," decimal-separator="." style="background: #1ABB9C;">Generate CSV</button>
+										</div>
+									</div>
+								</div>
 							</div>
 						</div>
-		    		</div>
-		    		<!-- MONTHLY -->
-		    		<div class="row" ng-switch-when="2">
-		    			<div class="col-sm-12 reportTab">
-		    				<div class="col-md-12">
-								<h2 class="tabTitle">Monthly Sales</h2>
-								<p class="tabTitle">Please generate report to view editable sales.</p>
-							</div>
-							<div class="row buttonContainer">
+						<!-- MONTHLY -->
+						<div class="" ng-switch-when="2">
+							<div class="col-sm-12 reportTab">
 								<div class="col-md-12">
-									<label for="dateSelect">Month starting: </label>
-									<input style="padding: 5px;" type="date" id="dateSelect" class="hide-replaced" ng-model="startDate.value" />
-							     	<button type="button" class="btn btn-default btn-lg tabButton" ng-click="getMonthlySales()" style="background: #3498DB; color: #fff; padding: 10px; border-radius: 5px;">Get Report</button>
-							    </div>
-							</div>
-							<div class="row scrollable" ng-hide="hideTable">
-								<table class="table table-striped">
-								    <thead>
-								      <tr>
-								        <th>Sale ID</th>
-								        <th>Date/Time</th>
-								        <th>Total Items</th>
-								        <th>Total Price</th>
-								        <th></th>
-								        <th></th>
-								      </tr>
-								    </thead>
-								    <tbody>
-								      <tr ng-repeat="sale in salesArray">
-								        <td>{{sale.ID}}</td>
-								        <td>{{sale.SaleDateTime}}</td>
-								        <td>{{sale.TotalItems}}</td>
-								        <td>{{sale.TotalValue}}</td>
-								        <td><a ng-href="./#/sales/{{sale.ID}}" style="background: #3498DB; color: #fff; padding: 10px 15px; border-radius: 5px;">Edit</a></td>
-								        <td class="btn" ng-click="deleteSale(sale.ID)" style="color: #E74C3C">X</td>
-								      </tr>
-								    </tbody>
-						  		</table>
-							</div>
-							<hr>
-							<div class="row buttonContainer">
-								<!-- Return to report select -->
-						     	<button type="button" class="btn btn-default btn-lg tabButton" ng-click="returnToSelect()" style="background: #E74C3C; color: #fff; padding: 10px; border-radius: 5px;">Return</button>
-						     	<!-- GET for generating CSV file. http://code.stephenmorley.org/php/creating-downloadable-csv-files/ -->
- 							    <button type="button" class="btn btn-default btn-lg tabButton" ng-csv="salesArray" filename="MonthlySales{{date | date:'yyyy-MM-dd'}}.csv" field-separator="," decimal-separator="."  style="background: #1ABB9C; color: #fff; padding: 10px; border-radius: 5px;">Generate CSV</button>
-							</div>
-						</div>
-		    		</div>
-		    		<!-- ALL SALES -->
-		    		<div class="row" ng-switch-when="3">
-		    			<div class="col-sm-12 reportTab">
-							<h2 class="tabTitle">All Sales</h2>
-							<p class="tabTitle">Please generate report to view editable sales.</p>
-							<div class="row buttonContainer">
-						     	<button type="button" class="btn btn-default btn-lg tabButton" ng-click="hideTable = false" style="background: #3498DB; color: #fff; padding: 10px; border-radius: 5px;">Get Report</button>
-							</div>
-							<div class="row scrollable" ng-hide="hideTable">
-								<table class="table table-striped">
-								    <thead>
-								      <tr>
-								        <th>Sale ID</th>
-								        <th>Date/Time</th>
-								        <th>Total Items</th>
-								        <th>Total Price</th>
-								        <th></th>
-								        <th></th>
-								      </tr>
-								    </thead>
-								    <tbody>
-								      <tr ng-repeat="sale in salesArray">
-								        <td>{{sale.ID}}</td>
-								        <td>{{sale.SaleDateTime}}</td>
-								        <td>{{sale.TotalItems}}</td>
-								        <td>{{sale.TotalValue}}</td>
-								        <td><a ng-href="./#/sales/{{sale.ID}}" style="background: #3498DB; color: #fff; padding: 10px 15px; border-radius: 5px;">Edit</a></td>
-								        <td class="btn" ng-click="deleteSale(sale.ID)" style="color: #E74C3C">X</td>
-								      </tr>
-								    </tbody>
-						  		</table>
-							</div>
-							<hr>
-							<div class="row buttonContainer">
-								<!-- Return to report select -->
-						     	<button type="button" class="btn btn-default btn-lg tabButton" ng-click="returnToSelect()" style="background: #E74C3C; color: #fff; padding: 10px; border-radius: 5px;">Return</button>
-						     	<!-- GET for generating CSV file. http://code.stephenmorley.org/php/creating-downloadable-csv-files/ -->
- 							    <button type="button" class="btn btn-default btn-lg tabButton" ng-csv="salesArray" filename="AllSales{{date | date:'yyyy-MM-dd'}}.csv" field-separator="," decimal-separator="."  style="background: #1ABB9C; color: #fff; padding: 10px; border-radius: 5px;">Generate CSV</button>
+									<h2 class="tabTitle">Monthly Sales</h2>
+									<p class="tabTitle">Please generate report to view editable sales.</p>
+								</div>
+								<div class="row buttonContainer">
+									<div class="col-md-12">
+										<div class="col-md-6 btnlabel">
+											<label for="dateSelect">Month starting: </label>
+											<input style="padding: 5px;" type="date" id="dateSelect" class="hide-replaced" ng-model="startDate.value" />
+										</div>
+										<div class="col-md-6">
+											<button type="button" class="btn btn-default btn-lg tabButton" ng-click="getMonthlySales()">Get Report</button>
+										</div>
+									</div>
+								</div>
+								<div class="row" ng-hide="hideTable">
+									<table class="table table-striped">
+										<thead>
+										<tr>
+											<th>Sale ID</th>
+											<th>Date/Time</th>
+											<th>Total Items</th>
+											<th>Total Price</th>
+											<th></th>
+											<th></th>
+										</tr>
+										</thead>
+										<tbody>
+										<tr ng-repeat="sale in salesArray">
+											<td>{{sale.ID}}</td>
+											<td>{{sale.SaleDateTime}}</td>
+											<td>{{sale.TotalItems}}</td>
+											<td>{{sale.TotalValue}}</td>
+											<td><a ng-href="./#/sales/{{sale.ID}}" class="edit_sales">Edit</a></td>
+											<td class="btn" ng-click="deleteSale(sale.ID)" style="color: #E74C3C">X</td>
+										</tr>
+										</tbody>
+									</table>
+								</div>
+								<hr>
+								<div class="buttonContainer">
+									<!-- Return to report select -->
+									<div class="col-md-12">
+										<div class="col-md-6">
+											<button type="button" class="btn btn-default btn-lg tabButton" ng-click="returnToSelect()" style="background: #E74C3C;">Return</button>
+										</div>
+										<div class="col-md-6">
+											<!-- GET for generating CSV file. http://code.stephenmorley.org/php/creating-downloadable-csv-files/ -->
+											<button type="button" class="btn btn-default btn-lg tabButton" ng-csv="salesArray" filename="MonthlySales{{date | date:'yyyy-MM-dd'}}.csv" field-separator="," decimal-separator="."  style="background: #1ABB9C;">Generate CSV</button>
+										</div>
+									</div>
+								</div>
 							</div>
 						</div>
-		    		</div>
+						<!-- ALL SALES -->
+						<!--div class="" ng-switch-when="3">
+							<div class="col-sm-12 reportTab">
+								<div class="col-md-12">
+									<h2 class="tabTitle">All Sales</h2>
+									<p class="tabTitle">Please generate report to view editable sales.</p>
+								</div>
+								<div class="row buttonContainer">
+									<div class="col-md-12">
+										<div class="col-md-6 btnlabel">
+											<label for="dateSelect">start Date:</label>
+											<input type="date" id="dateSelect" class="hide-replaced" ng-model="startDate.value" />
+										</div>
+										<div class="col-md-6">
+											<button type="button" class="btn btn-default btn-lg tabButton" ng-click="hideTable = false">Get Report</button>
+										</div>
+									</div>
+								</div>
+								<div class="row" ng-hide="hideTable">
+									<table class="table table-striped">
+										<thead>
+										<tr>
+											<th>Sale ID</th>
+											<th>Date/Time</th>
+											<th>Total Items</th>
+											<th>Total Price</th>
+											<th></th>
+											<th></th>
+										</tr>
+										</thead>
+										<tbody>
+										<tr ng-repeat="sale in salesArray">
+											<td>{{sale.ID}}</td>
+											<td>{{sale.SaleDateTime}}</td>
+											<td>{{sale.TotalItems}}</td>
+											<td>{{sale.TotalValue}}</td>
+											<td><a ng-href="./#/sales/{{sale.ID}}" class="edit_sales">Edit</a></td>
+											<td class="btn" ng-click="deleteSale(sale.ID)" style="color: #E74C3C">X</td>
+										</tr>
+										</tbody>
+									</table>
+								</div>
+								<hr>
+								<div class="row buttonContainer">
+
+									<-- Return to report select -->
+									<!--div class="col-md-12">
+										<div class="col-md-6">
+											<button type="button" class="btn btn-default btn-lg tabButton" ng-click="returnToSelect()" style="background: #E74C3C;">Return</button>
+										</div>
+										<div class="col-md-6">
+											<-- GET for generating CSV file. http://code.stephenmorley.org/php/creating-downloadable-csv-files/ -->
+											<!--button type="button" class="btn btn-default btn-lg tabButton" ng-csv="salesArray" filename="AllSales{{date | date:'yyyy-MM-dd'}}.csv" field-separator="," decimal-separator="."  style="background: #1ABB9C;">Generate CSV</button>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div-->
+
+						<!-- YEARLY -->
+						<div class="" ng-switch-when="4">
+							<div class="col-sm-12 reportTab">
+								<div class="col-md-12">
+									<h2 class="tabTitle">Yearly Sales</h2>
+									<p class="tabTitle">Please generate report to view editable sales.</p>
+								</div>
+								<div class="row buttonContainer">
+									<div class="col-md-12">
+										<div class="col-md-6 btnlabel">
+											<label for="dateSelect">Year starting: </label>
+											<input style="padding: 5px;" type="date" id="dateSelect" class="hide-replaced" ng-model="startDate.value" />
+										</div>
+										<div class="col-md-6">
+											<button type="button" class="btn btn-default btn-lg tabButton" ng-click="getYearlySales()">Get Report</button>
+										</div>
+									</div>
+								</div>
+								<div class="row" ng-hide="hideTable">
+									<table class="table table-striped">
+										<thead>
+										<tr>
+											<th>Sale ID</th>
+											<th>Date/Time</th>
+											<th>Total Items</th>
+											<th>Total Price</th>
+											<th></th>
+											<th></th>
+										</tr>
+										</thead>
+										<tbody>
+										<tr ng-repeat="sale in salesArray">
+											<td>{{sale.ID}}</td>
+											<td>{{sale.SaleDateTime}}</td>
+											<td>{{sale.TotalItems}}</td>
+											<td>{{sale.TotalValue}}</td>
+											<td><a ng-href="./#/sales/{{sale.ID}}" class="edit_sales">Edit</a></td>
+											<td class="btn" ng-click="deleteSale(sale.ID)" style="color: #E74C3C">X</td>
+										</tr>
+										</tbody>
+									</table>
+								</div>
+								<hr>
+								<div class="buttonContainer">
+									<!-- Return to report select -->
+									<div class="col-md-12">
+										<div class="col-md-6">
+											<button type="button" class="btn btn-default btn-lg tabButton" ng-click="returnToSelect()" style="background: #E74C3C;">Return</button>
+										</div>
+										<div class="col-md-6">
+											<!-- GET for generating CSV file. http://code.stephenmorley.org/php/creating-downloadable-csv-files/ -->
+											<button type="button" class="btn btn-default btn-lg tabButton" ng-csv="salesArray" filename="YearlySales{{date | date:'yyyy-MM-dd'}}.csv" field-separator="," decimal-separator="."  style="background: #1ABB9C;">Generate CSV</button>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+
+
+					</div>
 				</div>
 			</div>
-    	</div>
-    </div>
-</div>
+		</div>
+	</div>
+	<div class="col-md-1"></div>
 </div>
