toching the sales and app.js

--- a/templates/sales.html
+++ b/templates/sales.html
@@ -1,22 +1,30 @@
 <head>
     <!-- Bootstrap -->
-
+    <style>
+        button.btn-default{
+            color: #fff;
+            font-size: small;
+        }
+        tr.viewer.ng-scope>td{
+            vertical-align:middle;
+        }
+    </style>
 </head>
     
-<div class="container-fluid" style="background: #fff; padding-bottom: 20px; height: ;">
-    <div class="" style="width: 80%; float: right;">
+<div class="container-fluid" style="background: #fff; padding-bottom: 20px;">
+    <div class="" style="width: 75%; float: right;">    
     	<h1>Add Sales</h1><p>To edit sales please navigate to <b>sale Reports</b>.</p>
     </div>
     <div class="row" style="clear:right;">
-    <!-- SIDE TABS -->
-        <div class="col-lg-3 col-md-3 col-sm-3"></div>
-    	<div class="col-sm-1">
+        <!-- SIDE TABS -->
+        <div class="col-lg-2 col-md-2 col-sm-3"></div>
+    	<div class="col-lg-1 col-sm-1 col-md-1">
     	<!-- impliment second set for xs devices -->
-    		<div class="row" ><p class="sideTab" ng-class="{'selected':addSelected}" style="width: 100%;">Add</p></div>
-    		<div class="row"><p class="sideTab" ng-class="{'selected':editSelected}" style="width: 100%;">Edit</p></div>
+    		<div class="row" ><p class="sideTab" ng-class="{'selected':addSelected}">Add</p></div>
+    		<div class="row"><p class="sideTab" ng-class="{'selected':editSelected}">Edit</p></div>
     	</div>
     	<!-- INPUT FORM -->
-    	<div class="col-lg-4 col-md-4 col-sm-6 formColumn" style="background: ;height: ;">
+    	<div class="col-lg-4 col-md-4 col-sm-6 formColumn">
 		<!-- OUTPUT VIEW -->
 			<form name="saleForm" class="form-group">
                 <div class="form-group">
@@ -32,8 +40,8 @@
                     <br/>
 
     			    <label for="qty">Quantity:</label>
-    			    <input type="number" name="saleQty" class="form-control" id="qty" ng-model="qty" ng-pattern="/^[0-9]*$/" ng-max="{{product.quantityOnHand}}" required>
-    				    <span class="validationError" ng-show="saleForm.saleQty.$error.pattern || saleForm.saleQty.$error.number">Not a valid number!</span>
+    			    <input type="number" name="saleQty" class="form-control" min="1" id="qty" ng-model="qty" ng-pattern="/^[0-9]*$/" ng-max="{{product.quantityOnHand}}" required>
+    				    <span class="validationError" ng-show="saleForm.saleQty.$error.pattern || saleForm.saleQty.$error.number || saleForm.saleQty.$error.min">Not a valid sale value!</span>
     	   				<span class="validationError" ng-show="(saleForm.saleQty.$touched || saleForm.$submitted) && saleForm.saleQty.$error.required">This field is required!</span>
                         <span class="validationError" ng-show="saleForm.saleQty.$error.ngMax">Only {{product.quantityOnHand}} in stock!</span>
                         <br/>
@@ -43,12 +51,11 @@
 			</form>
     	</div>
     	<!-- impliment second set for xs devices -->
-    	<div class="col-lg-4 col-md-4 col-sm-6 outputTab" style="height: ;">
+    	<div class="col-lg-4 col-md-4 col-sm-6 outputTab">
     		<div>
     			<h2>Sale Review:</h2>
     			<div class="table-responsive">
                     <table class="table table-striped table-hover table-condensed">
-                        <caption>Sale Details</caption>
                         <thead>
                             <tr>
                                 <th id="itemName">Name</th>
@@ -59,30 +66,33 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr data-ng-repeat="item in itemArray | startFrom: (currentPage - 1) * pageSize | limitTo: pageSize">
+                            <tr class="viewer" data-ng-repeat="item in itemArray | startFrom: (currentPage - 1) * pageSize | limitTo: pageSize">
                                 <td headers="itemName">{{item.name}}</td>
                                 <td headers="itemQty">{{item.qty}}</td>
                                 <td headers="itemCost">{{item.cost | currency:"#"}}</td>
-                                <td headers="editItem"><a class="handbtn" ng-click="editItem(itemArray.indexOf(item))" style="background: #3498DB; padding: 3px; color: #fff;">Edit</a></td>
+                                <td headers="editItem"><a class="handbtn" ng-click="editItem(itemArray.indexOf(item))" style="background: #3498DB; padding: 8px 15px; color: #fff;">Edit</a></td>
                                 <td headers="deleteItem" class="btn" ng-click="deleteItem(itemArray.indexOf(item))" style=" color: #E74C3C;">X</td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
                 <div class="btn-group">
-                    <button type="button" class="btn btn-default" data-ng-click="previousPage()" style="background: #3498DB ; color: #fff;">Previous</button>
-                    <button type="button" class="btn btn-default">{{currentPage}}</button>
-                    <button type="button" class="btn btn-default" data-ng-click="nextPage()" style="background: #3498DB ; color: #fff;">Next</button>
+                    <button type="button" class="btn btn-default" data-ng-click="previousPage()" style="background: #3498DB ;">Prev</button>
+                    <button type="button" class="btn btn-default" style="color: unset; border: unset;" disabled>{{currentPage}}</button>
+                    <button type="button" class="btn btn-default" data-ng-click="nextPage()" style="background: #3498DB ;">Next</button> <span style=" margin :10px; font-size: 100%;"> Total: {{totalPrice | currency:"#"}}</span>
                 </div>
     		</div>
     		<div>
-    			<h2>Total: {{totalPrice | currency:"#"}}</h2>
-    			<p>Select <b>done</b> to process sale.</p>
-                <div class="btn-group">
-                    <button type="button" class="btn btn-default btn-lg" ng-click="commitSale()" style="background: #1ABB9C ; color: #fff;">Done</button>
-                    <button type="button" class="btn btn-default btn-lg" ng-click="cancelSale()" style="background: #E74C3C  ; color: #fff;">Cancel</button>
+                <div class="btn-group" style="margin-top: 10px;">
+                    <button type="button" class="btn btn-default btn-lg" ng-click="commitSale()" style="background: #1ABB9C ;">Done</button>
+                    <button type="button" class="btn btn-default btn-lg" ng-click="cancelSale()" style="background: #E74C3C  ;">Cancel</button><!--span> Select <b>done</b> to process sale.</span-->
                 </div>
     		</div>
     	</div>
+        <div class="col-lg-1 col-md-1"></div>
     </div>
 </div>
+<script>
+    //var noOfrows = document.getElementById("tableCountRow").rows.length;
+    //alert(noOfrows);
+</script>
