--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,11 @@ html {
 }
 body {
   /* Margin bottom by footer height */
-  margin-bottom: ;
   overflow-x: hidden;
 }
 .footer {
   position: absolute;
   top: 100%;
-  width: ;
   /* Set the fixed height of the footer here */
   height: 40px;
   background-color: #f5f5f5;
@@ -31,9 +29,11 @@ body {
 }
 .sideTab {
   padding: 10px;
-  border-top-left-radius: 15px;
-  border-bottom-left-radius: 15px;
+  /*border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;*/
   background-color: #f5f5f5;
+  text-align: center;
+  width: 100%;
 }
 
 .outputTab {
@@ -48,11 +48,7 @@ body {
   background-color: #dcdcdc;
 }
 
-.selectTab {
-  text-align: center;
-}
-
-.tabTitle {
+.selectTab, .tabTitle {
   text-align: center;
 }
 
@@ -87,7 +83,6 @@ body {
 label{
   font-size: 16px;
 }
-
 /*
 slide-enter-setup
 slide-leave-setup
