acknowledging sRepS and Gentelella on about software page

--- a/templates/home.html
+++ b/templates/home.html
@@ -17,6 +17,7 @@
               <div style="text-align:center;">
                 <p> <h4>Licensed to: Graceys Mart</h4></p>
                 <p><h4 style="text-align:center;">&#169; Graceys Mart</h4></p>
+                <p>All thanks to sales rep and gentelella for thier template </p>
               </div> 
             </div>
          </div>
